--- a/projects/sentiment_stock_predictor/README
+++ b/projects/sentiment_stock_predictor/README
@@ -86,3 +86,6 @@ sentiment_stock_predictor/
 Run the main script to start the sentiment analysis and stock price correlation:
 ```bash
 python main.py
+
+## Authors
+Mohit Saharan, GitHub Copilot
